--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,42 @@
-<h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
-
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+<!DOCTYPE html>
+<html lang="en" >
+    <head>
+        <meta charset="UTF-8">
+        <title>My Resume</title>
+    </head>
+    <body>
+      <h1>About Me</h1>
+        <h1>Natan Tezare</h1>
+        
+        <img src="./assets/images/WhatsApp Image 2023-10-17 at 13.07.53_1d75690e.jpg" height="200" alt="image of natan">
+    <h2>Summary</h2>
+    <p>A rising junior pursuing my Bachelor’s in Software Engineering at USIU-Africa. My skill set is a blend of technical knowledge as well as interpersonal skills. My technical expertise involves data structures, HTML, CSS, JavaScript, Java, and Python. My people skills include problem solving and collaborating well in teams. I am seeking opportunities where I can utilize my existing knowledge for the betterment of the organization as well as learn new skills to enhance my potential and flourish myself professionally. </p>
+        <hr/>
+    <h2>Education</h2>
+    <ul>
+        <li>USIU-Africa</li>
+        <li>Mainefhi College of Engineering and Technology</li>
+        <li>Udemy</li>
+    </ul>
+    <hr/>
+    <h2>Skills</h2>
+    <ul>
+        <li><h3>Hard Skills</h3></li>
+        <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Java</li>
+        <li>Python</li>
+         </ul>
+    <li><h3>Soft Skills</h3></li> 
+    <ul>
+        <li>Problem Solving</li>
+        <li>Communications</li>
+        <li>Team Collaboration</li>
+    </ul>
+</ul>
+     <p>© 2024 Natan Tezare</p>     
+    </body>
+</html>
