--- a/public/about.html
+++ b/public/about.html
@@ -6,10 +6,10 @@
         <title>My Resume</title>
     </head>
     <body>
-      <h1>About Me</h1><hr />
+      <h1>About Me</h1><hr/>
         <h2>Natan Tezare</h2>
         
-        <img src="../assets/images/WhatsApp Image 2023-10-17 at 13.07.53_1d75690e.jpg" " height="200" alt="image of natan">
+        <img src="../assets/images/WhatsApp Image 2023-10-17 at 13.07.53_1d75690e.jpg" height="200" alt="image of natan">
     <h2>Summary</h2>
     <p>A rising junior pursuing my Bachelor’s in Software Engineering at USIU-Africa. My skill set is a blend of technical knowledge as well as interpersonal skills. My technical expertise involves data structures, HTML, CSS, JavaScript, Java, and Python. My people skills include problem solving and collaborating well in teams. I am seeking opportunities where I can utilize my existing knowledge for the betterment of the organization as well as learn new skills to enhance my potential and flourish myself professionally. </p>
         <hr/>
